kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-app
  labels:
    app: training-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: training-app
  template:
    metadata:
      labels:
        app: training-app
    spec:
      containers:
        - name: dancerapy-app
          image: profemzy/training-api:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.2"
              memory: "56Mi"
