kubernetes/psql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-pod
spec:
  containers:
    - name: sleep
      image: jbergknoff/postgresql-client
      command: ["/bin/sh", "-c"]
      args: ["sleep infinity"]
