kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-app-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: training-app
