kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dancerapy.infotitans.ca  
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: training-app-service
                port:
                  number: 8080
